# JaxColors

./: .gitignore  LICENSE  README.md  pyproject.toml
jaxcolors/: color_matching_functions.py  composite.py  illuminants.py  transform.py  utils.py
processing/: plot_color_matching_functions.py  read_and_save_color_matching_functions.py  read_and_save_illuminants.py
tests/: test_XYZ_to_sRGB.py  test_XYZ_to_xyY.py  test_spectrum_to_sRGB.py
