[build-system]
build-backend = "setuptools.build_meta"
requires = [
    "setuptools",
]

[tool.setuptools]
packages = [
    "jaxcolors",
]

[project]
name = "jaxcolors"
version = "0.1.0"
description = "JAX-based color transformation"
readme = "README.md"
requires-python = ">=3.8"
authors = [
    {name = "Jungtaek Kim", email = "jungtaek.kim.mail@gmail.com"},
]
dependencies = [
    "jax",
    "jaxlib",
]
license = {text = "MIT"}
classifiers = [
    "Programming Language :: Python :: 3",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Operating System :: OS Independent",
    "Topic :: Scientific/Engineering",
]

[project.urls]
Homepage = "https://github.com/JaxLayerLumos/JaxColors"
Source = "https://github.com/JaxLayerLumos/JaxColors"

[project.optional-dependencies]
dev = [
    "matplotlib",
    "pytest",
    "wheel",
    "build",
    "twine",
    "black",
    "colour-science",
]
